[gd_scene load_steps=13 format=3 uid="uid://3er6vv4y61bk"]

[ext_resource type="Script" path="res://src/rival/rival.gd" id="1_2ya48"]
[ext_resource type="Texture2D" uid="uid://dir22mfv15vm0" path="res://assets/graphics/enemy_Idle.png" id="2_e0hsr"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_kk78e"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_hocoa"]
[ext_resource type="Script" path="res://addons/godot_state_charts/animation_tree_state.gd" id="4_qteil"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_0wpqp"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="7_df4ce"]

[sub_resource type="Animation" id="Animation_8nj2a"]
resource_name = "block_down"
length = 1.2
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/LowerBlock:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ykql8"]
_data = {
"block_down": SubResource("Animation_8nj2a")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0qhhp"]
animation = &"block_down"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8c44c"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1eh02"]
states/block_down/node = SubResource("AnimationNodeAnimation_0qhhp")
states/block_down/position = Vector2(382, -1.73808)
transitions = ["Start", "block_down", SubResource("AnimationNodeStateMachineTransition_8c44c")]
graph_offset = Vector2(0, -141.071)

[node name="Rival" type="Node3D"]
script = ExtResource("1_2ya48")

[node name="Visuals" type="Node3D" parent="."]

[node name="LowerBlock" type="Sprite3D" parent="Visuals"]
texture_filter = 0
texture = ExtResource("2_e0hsr")
hframes = 6
frame = 5

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_kk78e")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("3_hocoa")
initial_state = NodePath("UpperBlockTreeState")

[node name="DownTreeState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../AnimationTree")

[node name="ToKnocked" type="Node" parent="StateChart/CompoundState/DownTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../KnockedTreeState")
event = &"knocked"

[node name="ToLowerBlock" type="Node" parent="StateChart/CompoundState/DownTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../LowerBlockTreeState")
event = &"revive_lower_block"

[node name="ToUpperBlock" type="Node" parent="StateChart/CompoundState/DownTreeState"]
script = ExtResource("5_0wpqp")
event = &"revive_upper_block"

[node name="KnockedTreeState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../AnimationTree")

[node name="LeftJabCompoundState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("3_hocoa")
initial_state = NodePath("LeftJabChargeTreeState")

[node name="LeftJabChargeTreeState" type="Node" parent="StateChart/CompoundState/LeftJabCompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../../AnimationTree")

[node name="ToJabHurt" type="Node" parent="StateChart/CompoundState/LeftJabCompoundState/LeftJabChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_jab"

[node name="ToHookHurt" type="Node" parent="StateChart/CompoundState/LeftJabCompoundState/LeftJabChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_hook"

[node name="ToUppercutHurt" type="Node" parent="StateChart/CompoundState/LeftJabCompoundState/LeftJabChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_uppercut"

[node name="LeftJabTreeState" type="Node" parent="StateChart/CompoundState/LeftJabCompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../../AnimationTree")

[node name="ToJabHurt" type="Node" parent="StateChart/CompoundState/LeftJabCompoundState/LeftJabTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_jab"

[node name="ToHookHurt" type="Node" parent="StateChart/CompoundState/LeftJabCompoundState/LeftJabTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_hook"

[node name="ToUppercutHurt" type="Node" parent="StateChart/CompoundState/LeftJabCompoundState/LeftJabTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_uppercut"

[node name="RightJabCompoundState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("3_hocoa")
initial_state = NodePath("RightJabChargeTreeState")

[node name="RightJabChargeTreeState" type="Node" parent="StateChart/CompoundState/RightJabCompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../../AnimationTree")

[node name="ToJabHurt" type="Node" parent="StateChart/CompoundState/RightJabCompoundState/RightJabChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_jab"

[node name="ToHookHurt" type="Node" parent="StateChart/CompoundState/RightJabCompoundState/RightJabChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_hook"

[node name="ToUppercutHurt" type="Node" parent="StateChart/CompoundState/RightJabCompoundState/RightJabChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_uppercut"

[node name="RightJabTreeState" type="Node" parent="StateChart/CompoundState/RightJabCompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../../AnimationTree")

[node name="ToJabHurt" type="Node" parent="StateChart/CompoundState/RightJabCompoundState/RightJabTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_jab"

[node name="ToHookHurt" type="Node" parent="StateChart/CompoundState/RightJabCompoundState/RightJabTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_hook"

[node name="ToUppercutHurt" type="Node" parent="StateChart/CompoundState/RightJabCompoundState/RightJabTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_uppercut"

[node name="LeftHookCompoundState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("3_hocoa")
initial_state = NodePath("LeftHookChargeTreeState")

[node name="LeftHookChargeTreeState" type="Node" parent="StateChart/CompoundState/LeftHookCompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../../AnimationTree")

[node name="ToJabHurt" type="Node" parent="StateChart/CompoundState/LeftHookCompoundState/LeftHookChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_jab"

[node name="ToHookHurt" type="Node" parent="StateChart/CompoundState/LeftHookCompoundState/LeftHookChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_hook"

[node name="ToUppercutHurt" type="Node" parent="StateChart/CompoundState/LeftHookCompoundState/LeftHookChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_uppercut"

[node name="LeftHookTreeState" type="Node" parent="StateChart/CompoundState/LeftHookCompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../../AnimationTree")

[node name="ToJabHurt" type="Node" parent="StateChart/CompoundState/LeftHookCompoundState/LeftHookTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_jab"

[node name="ToHookHurt" type="Node" parent="StateChart/CompoundState/LeftHookCompoundState/LeftHookTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_hook"

[node name="ToUppercutHurt" type="Node" parent="StateChart/CompoundState/LeftHookCompoundState/LeftHookTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_uppercut"

[node name="RightHookCompoundState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("3_hocoa")
initial_state = NodePath("RightHookChargeTreeState")

[node name="RightHookChargeTreeState" type="Node" parent="StateChart/CompoundState/RightHookCompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../../AnimationTree")

[node name="ToJabHurt" type="Node" parent="StateChart/CompoundState/RightHookCompoundState/RightHookChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_jab"

[node name="ToHookHurt" type="Node" parent="StateChart/CompoundState/RightHookCompoundState/RightHookChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_hook"

[node name="ToUppercutHurt" type="Node" parent="StateChart/CompoundState/RightHookCompoundState/RightHookChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_uppercut"

[node name="RightHookTreeState" type="Node" parent="StateChart/CompoundState/RightHookCompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../../AnimationTree")

[node name="ToJabHurt" type="Node" parent="StateChart/CompoundState/RightHookCompoundState/RightHookTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_jab"

[node name="ToHookHurt" type="Node" parent="StateChart/CompoundState/RightHookCompoundState/RightHookTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_hook"

[node name="ToUppercutHurt" type="Node" parent="StateChart/CompoundState/RightHookCompoundState/RightHookTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_uppercut"

[node name="LeftUppercutCompoundState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("3_hocoa")
initial_state = NodePath("LeftUppercutChargeTreeState")

[node name="LeftUppercutChargeTreeState" type="Node" parent="StateChart/CompoundState/LeftUppercutCompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../../AnimationTree")

[node name="ToJabHurt" type="Node" parent="StateChart/CompoundState/LeftUppercutCompoundState/LeftUppercutChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_jab"

[node name="ToHookHurt" type="Node" parent="StateChart/CompoundState/LeftUppercutCompoundState/LeftUppercutChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_hook"

[node name="ToUppercutHurt" type="Node" parent="StateChart/CompoundState/LeftUppercutCompoundState/LeftUppercutChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_uppercut"

[node name="LeftUppercutTreeState" type="Node" parent="StateChart/CompoundState/LeftUppercutCompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../../AnimationTree")

[node name="ToJabHurt" type="Node" parent="StateChart/CompoundState/LeftUppercutCompoundState/LeftUppercutTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_jab"

[node name="ToHookHurt" type="Node" parent="StateChart/CompoundState/LeftUppercutCompoundState/LeftUppercutTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_hook"

[node name="ToUppercutHurt" type="Node" parent="StateChart/CompoundState/LeftUppercutCompoundState/LeftUppercutTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_uppercut"

[node name="RightUppercutCompoundState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("3_hocoa")
initial_state = NodePath("RightUppercutChargeTreeState")

[node name="RightUppercutChargeTreeState" type="Node" parent="StateChart/CompoundState/RightUppercutCompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../../AnimationTree")

[node name="ToJabHurt" type="Node" parent="StateChart/CompoundState/RightUppercutCompoundState/RightUppercutChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_jab"

[node name="ToHookHurt" type="Node" parent="StateChart/CompoundState/RightUppercutCompoundState/RightUppercutChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_hook"

[node name="ToUppercutHurt" type="Node" parent="StateChart/CompoundState/RightUppercutCompoundState/RightUppercutChargeTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_uppercut"

[node name="RightUppercutTreeState" type="Node" parent="StateChart/CompoundState/RightUppercutCompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../../AnimationTree")

[node name="ToJabHurt" type="Node" parent="StateChart/CompoundState/RightUppercutCompoundState/RightUppercutTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_jab"

[node name="ToHookHurt" type="Node" parent="StateChart/CompoundState/RightUppercutCompoundState/RightUppercutTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_hook"

[node name="ToUppercutHurt" type="Node" parent="StateChart/CompoundState/RightUppercutCompoundState/RightUppercutTreeState"]
script = ExtResource("5_0wpqp")
to = NodePath("../../../HurtJabTreeState")
event = &"hurt_by_uppercut"

[node name="UpperBlockTreeState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("7_df4ce")

[node name="LowerBlockTreeState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../AnimationTree")

[node name="HurtJabTreeState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../AnimationTree")

[node name="HurtHookTreeState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../AnimationTree")

[node name="HurtUppercutTreeState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_qteil")
animation_tree = NodePath("../../../AnimationTree")

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ykql8")
}
tree_root = SubResource("AnimationNodeStateMachine_1eh02")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ykql8")
}
autoplay = "block_down"

[node name="DownTimer" type="Timer" parent="."]

[connection signal="state_entered" from="StateChart/CompoundState/KnockedTreeState" to="." method="_on_knocked_tree_state_state_entered"]
[connection signal="state_entered" from="StateChart/CompoundState/UpperBlockTreeState" to="." method="_on_upper_block_tree_state_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/UpperBlockTreeState" to="." method="_on_upper_block_tree_state_state_exited"]
[connection signal="state_entered" from="StateChart/CompoundState/LowerBlockTreeState" to="." method="_on_lower_block_tree_state_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/LowerBlockTreeState" to="." method="_on_lower_block_tree_state_state_exited"]
